Parser/ExampleParser.jjt
options {
    IGNORE_CASE = true;
    LOOKAHEAD = 1;
    FORCE_LA_CHECK = true;
}

PARSER_BEGIN(ExampleParser)

public class ExampleParser {
    public static void main(String args[]) throws ParseException, java.io.FileNotFoundException {
        ExampleParser parser;
        parser = new ExampleParser(new java.io.FileInputStream(args[0]));
        SimpleNode root = parser.start();
        root.dump("");
      }
}

PARSER_END(ExampleParser)

SKIP : {
  " "
  | "\t"
  | "\n"
  | "\r"
  | "\f"
}

// comments: not really part of JSON spec, but parser shouldn't blow-up if present
SKIP: {
        //single-line 'C'-style comments
        < "//" (~["\n","\r"])* ("\n" | "\r" | "\r\n")>
}

//Reserved words
TOKEN: {
    <NAME: "\"" "name" "\"">
    | <CHILDREN: "\"""children""\"">
    | <CONTENT: "\"""content""\"">
    | <CODE: "\"" "code" "\"">
}

// JSON operators (prefix with O_ to avoid naming conflicts)
TOKEN: {
        <O_OPENBRACE: "{">
    |   <O_CLOSEBRACE: "}">
    |   <O_OPENBRACKET: "[">
    |   <O_CLOSEBRACKET: "]">
    |   <O_COMMA: ",">
    |   <O_COLON: ":">
    |   <O_DOT: ".">
    |   <O_PLUS: "+">
    |   <O_MINUS: "-">
    |   <O_QUOTATIONMARKS: "\"">
    |   <O_OPENPARENTHESIS: "(">
    |   <O_CLOSEPARENTHESIS: ")">
    |   <O_SLASH: "/">
}

// numeric literals
TOKEN: {
    <#DIGIT: ["0"-"9"]>
 |  <#LETTER: ["a" - "z", "A" - "Z"]>
 |  <#SPACE: [" "]>
}



//Strings
TOKEN: {
   <STRING_NAME: <O_QUOTATIONMARKS> (<LETTER>)+ <O_QUOTATIONMARKS> >
|  <STRING_CONTENT: <O_QUOTATIONMARKS> (("<")? ((<LETTER> | <DIGIT> )* (<O_OPENPARENTHESIS>)? (<SPACE> (<LETTER> | <DIGIT>)*)? (<O_CLOSEPARENTHESIS>)? (">")? (<O_DOT>)? (<LETTER>)*  | <QUOTED_STRING> )
| ("==") | ("_++") | ("_--")
) <O_QUOTATIONMARKS> >



|  <STRING_CODE: <O_QUOTATIONMARKS> <O_OPENPARENTHESIS> (<O_SLASH> (<LETTER> | <SPACE> | <DIGIT>)+)+ <O_DOT> (<LETTER> | <SPACE> | <DIGIT>)+ <O_COLON> (<DIGIT>)+ <O_CLOSEPARENTHESIS> <O_QUOTATIONMARKS> >
}

// string literals
TOKEN: {
        <QUOTED_STRING: "\"" ( (~["\"","\\"]) | ("\\" ( ["n","t","b","r","f","\\","\""] ) ) )* "\"">
    |   <SINGLE_QUOTED_STRING: "\'" ( (~["\'","\\"]) | ("\\" ( ["n","t","b","r","f","\\","\'"] ) ) )* "\'">
}

SimpleNode start() : {} {
  expr1() <EOF> {return jjtThis;}
}

void expr1() #NAME : {Token t;} {

  <O_OPENBRACE> <NAME> <O_COLON> t = <STRING_NAME> <O_COMMA>
  {jjtThis.value = t.image;}
  (expr2())?
  (expr3())?
  (expr4())?
}

void expr2() #CONTENT: {Token t;} {
  (<CONTENT> <O_COLON>  (t = <STRING_CONTENT> | t = <STRING_NAME>)  <O_COMMA> {jjtThis.value = t.image;})
}

void expr3() #CODE: {Token t;} {
  (<CODE> <O_COLON> t = <STRING_CODE> <O_COMMA> {jjtThis.value = t.image;})
}

void expr4() #CHILDREN: {} {
  (<CHILDREN> <O_COLON> <O_OPENBRACKET> (expr1())? <O_CLOSEBRACKET> <O_COMMA> )? <O_CLOSEBRACE> (<O_COMMA> expr1())?
}
